# huffman

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  f  huffman-coding.cabal  huffman-tree.cabal  huffman.hs
app/: Huffman.hs  Main.hs
src/: Huffman.hs
